# garnet

./: .coveragerc  .gitignore  .gitmodules  .mflow.yml  .travis.yml  CBcb  CBsimple_cb  LICENSE  Makefile  README.md  SBsb  accumulation.py  bs_to_h.py  cb.vp  cb_functional_model.py  cb_wrapper.py  cb_wrapper_main.py  cfg_controller_hier_pass.py  chip_top.py  concat_tiles.py  config_register.py  config_register_test.py  conftest.py  copy_formatted.py  copy_formatted_tensor_tiling.py  count_nnz_tiling.py  debug_concat.py  dense_timing.py  dense_timing_fortensorapps.py  dump_glb_output.py  garnet.json  garnet.py  garnet_amber.py  gb.py  gen_global_buffer_magma.py  generate_app.py  generate_sweep.py  generic_memory_0.txt  generic_memory_1.txt  genesis_wrapper.py  (+24 more)
tests/test_app/pointwise/: CMakeLists.txt  Makefile  pointwise_generator.cpp  process.cpp
tests/test_app/pointwise/.ast_tools/: __call__139681023181760.py  __call__139681023453248.py  __call__139681024026048.py  __call__139681026944832.py  __call__139681029984448.py  __call__139681031736512.py  __call__139681031865792.py  __call__139681034968384.py  __call__139681035916608.py  __call__139681038922304.py  __call__139681039016128.py  __call__139681039100864.py  __call__139681040292416.py  __call__139681042377536.py  __call__139681045516608.py  __call__139681045518784.py  __call__140367785350464.py  __call__140367785352256.py  __call__140367788499008.py  __call__140367790714176.py  __call__140367792256320.py  __call__140367792373312.py  __call__140367793157568.py  __call__140367793963968.py  __call__140367794836288.py  (+6 more)
(+6903 files in other folders)
